# mihari-svg

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
mihari_svg/: main.py
mihari_svg/models/: common.py
mihari_svg/modules/: __init__.py  to_png.py
